[gd_scene load_steps=3 format=3 uid="uid://cvurel176gewo"]

[ext_resource type="Script" uid="uid://cofi3ir7mw7q1" path="res://script/statistic.gd" id="1_uai47"]

[sub_resource type="LabelSettings" id="LabelSettings_08r4e"]
font_size = 34

[node name="Statistic" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uai47")

[node name="Button" type="Button" parent="."]
process_mode = 3
top_level = true
layout_mode = 0
offset_left = 27.0
offset_top = 24.0
offset_right = 161.0
offset_bottom = 68.0
text = "Back"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -74.5
offset_right = 63.5
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 627.0
offset_top = -161.0
offset_right = 754.0
offset_bottom = -114.0
grow_vertical = 2
text = "Stage 1 "
label_settings = SubResource("LabelSettings_08r4e")
horizontal_alignment = 1

[node name="Label6" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.5
offset_top = 17.0
offset_right = 63.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
text = "Best Score : "

[node name="HScore 1" type="Label" parent="Label/Label6"]
process_mode = 3
layout_mode = 0
offset_left = 96.0
offset_top = -1.0
offset_right = 143.0
offset_bottom = 22.0
size_flags_horizontal = 4
text = "score"

[node name="Label" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 47.0
offset_right = 40.0
offset_bottom = 70.0
grow_vertical = 0
text = "By :"

[node name="Name1" type="Label" parent="Label/Label"]
layout_mode = 0
offset_left = 39.0
offset_right = 79.0
offset_bottom = 23.0
text = "Name"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -23.5
offset_right = 61.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
text = "Stage 2"
label_settings = SubResource("LabelSettings_08r4e")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Label2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = 13.0
offset_right = 69.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
text = "Best Score : "

[node name="Hscore 2" type="Label" parent="Label2/Label4"]
layout_mode = 0
offset_left = 100.0
offset_top = -1.0
offset_right = 155.0
offset_bottom = 22.0
size_flags_horizontal = 4
text = "score 2"

[node name="Label" type="Label" parent="Label2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 42.0
offset_right = 47.0
offset_bottom = 65.0
grow_vertical = 0
text = "By :"

[node name="Name2" type="Label" parent="Label2/Label"]
layout_mode = 0
offset_left = 39.0
offset_right = 79.0
offset_bottom = 23.0
text = "Name"

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -745.0
offset_top = 111.0
offset_right = -618.0
offset_bottom = 158.0
grow_horizontal = 0
grow_vertical = 2
text = "Stage 3"
label_settings = SubResource("LabelSettings_08r4e")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Label3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = 9.0
offset_right = 69.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
text = "Best Score : "

[node name="Hscore 3" type="Label" parent="Label3/Label5"]
layout_mode = 0
offset_left = 95.0
offset_right = 150.0
offset_bottom = 49.0
size_flags_horizontal = 4
text = "score 3
"

[node name="Label" type="Label" parent="Label3"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 37.0
offset_right = 46.0
offset_bottom = 60.0
grow_vertical = 0
text = "By :"

[node name="Name3" type="Label" parent="Label3/Label"]
layout_mode = 0
offset_left = 39.0
offset_right = 79.0
offset_bottom = 23.0
text = "Name"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
